feat: viem base

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ RPC_MAINNET=yourMainnetRPC
 RPC_POLYGON=yourPolygonRPC
 RPC_OPTIMISM=yourOptimismRPC
 RPC_ARBITRUM=yourArbitrumRPC
+RPC_BASE=yourBaseRPC
 TENDERLY_ACCESS_TOKEN=yourTenderlyAccessToken
 TENDERLY_PROJECT_SLUG=yourTenderlyProjectSlug
 TENDERLY_ACCOUNT=yourTenderlyAccountName
