--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@actions/cache": "^3.0.0",
     "@bgd-labs/aave-address-book": "^1.32.0",
-    "@bgd-labs/aave-cli": "0.0.20-f02128ebf61c99fe88e6f0883b0fad95242805de.0 build",
+    "@bgd-labs/aave-cli": "0.0.20",
     "@supercharge/promise-pool": "^2.3.0",
     "bs58": "^5.0.0",
     "dotenv": "^16.3.1",
