--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@actions/cache": "^3.0.0",
     "@bgd-labs/aave-address-book": "^1.32.0",
-    "@bgd-labs/aave-cli": "0.0.21",
+    "@bgd-labs/aave-cli": "0.0.22-7a47a7dcadfeb3aea4c4748753f6b77db95fb772.0",
     "@supercharge/promise-pool": "^2.3.0",
     "bs58": "^5.0.0",
     "dotenv": "^16.3.1",
@@ -40,7 +40,7 @@
     "jest": "^28.1.2",
     "micro-ftch": "^0.3.1",
     "typescript": "^4.7.4",
-    "viem": "^1.6.0"
+    "viem": "^1.19.3"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
